# arbiter

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  claude-flow.config.json  instructions.md  pyproject.toml
.claude-flow/agents/: store.json
.claude-flow/swarm/: swarm-state.json
.claude-flow/tasks/: store.json
broker/: __init__.py  __main__.py  config.example.json  config.py  engine.py  hooks.py  mcp_resources.py  policy.py  schema.py  server.py
broker/adapters/: __init__.py  local_cache.py  ruflo.py  supermemory.py
docs/: code-review.md  deployment.md  mcp-integration.md  memory-broker.md  ruflo-swarm-report.md  setup-minimo.md  topologia-server.md
tests/: test_broker_roundtrip.py  test_hooks.py  test_isolation.py  test_server_http.py
